# Capstone-Finadvisor-ai

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ETHICS.md  LICENSE  PRESENTATION.md  README.md  SECURITY.md  generate_translations.py
finadvisor-ai/backend/: .gitignore  Dockerfile  pyproject.toml  pytest.ini  railway.json  render-build.sh  requirements.txt  ruff.toml  test_agent.py
finadvisor-ai/backend/src/: __init__.py  main.py  scheduler.py
finadvisor-ai/backend/src/agent/: __init__.py  graph.py  state.py
finadvisor-ai/backend/src/api/: __init__.py
finadvisor-ai/backend/src/auth/: __init__.py  dependencies.py  jwt_handler.py  password.py
finadvisor-ai/backend/src/config/: __init__.py  settings.py
finadvisor-ai/backend/src/database/: __init__.py  client.py  operations.py  schemas.sql
finadvisor-ai/backend/src/mcp/: __init__.py  server.py  tools_registry.py
finadvisor-ai/backend/src/memory/: __init__.py  long_term.py  short_term.py
finadvisor-ai/backend/src/models/: __init__.py  model_manager.py
finadvisor-ai/backend/src/rag/: __init__.py  ab_testing.py  document_processor.py  embeddings.py  retriever.py  vector_store.py
finadvisor-ai/backend/src/tools/: __init__.py  browser_tools.py  budget_tools.py  calculation_tools.py  chart_tools.py  crypto_tools.py  document_export_tools.py  image_tools.py  market_tools.py  news_tools.py  planning_tools.py  portfolio_tools.py  rag_tools.py  tax_tools.py
finadvisor-ai/backend/src/utils/: __init__.py  (+6 more)
finadvisor-ai/backend/tests/: __init__.py  conftest.py  test_agent.py  test_auth.py  test_image_tools.py  test_rag.py  test_tools.py
(+114 files in other folders)
